--- a/rentify-backend/src/main/resources/application-dev.yml
+++ b/rentify-backend/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://roundhouse.proxy.rlwy.net:59144/railway
-    username: root
-    password: QdcvoKhoFAFzmeOTXtOAbwsZhEXiwwgf
+    url: jdbc:mysql://presidiodb.cd8ek2aasikq.ap-south-1.rds.amazonaws.com:3306/rentify
+    username: username
+    password: password
 
   jpa:
     show-sql: true
@@ -35,7 +35,7 @@ spring:
 
 #Secret Key
 Secret:
-  key: <SecretKey>
+  key: "fkgnkvbkdfgrthgsfvfghjgnfdhguigndfjvkndffdkngdfkj"
 
 #AWS properties
 aws:
