--- a/rentify-ui/angular.json
+++ b/rentify-ui/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/",
+            "outputPath": "dist/rentify-ui",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
