--- a/rentify-backend/src/main/resources/application-dev.yml
+++ b/rentify-backend/src/main/resources/application-dev.yml
@@ -18,11 +18,11 @@ spring:
         jdbc:
           time_zone: UTC
 
-  mail:
+ mail:
     host: smtp.gmail.com
     port: 587
     username: hushenjuyel@gmail.com
-    password: <PASSWORD>
+    password: lrwn shju zcnp nsmv
     properties:
       mail:
         smtp:
@@ -39,13 +39,12 @@ Secret:
 
 #AWS properties
 aws:
-  accessKey: <AWS_ACCESS_KEY>
-  secretKey: <AWS_SECRET_KEY>
+  accessKey: AKIARV3CMNE6SZY2OMYX
+  secretKey: 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
   region: ap-south-1
 
   s3:
     bucket:
       name: rentify-in-bucket
       url: https://rentify-in-bucket.s3.ap-south-1.amazonaws.com
-
 
