--- a/rentify-backend/src/main/resources/application-dev.yml
+++ b/rentify-backend/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: hushenjuyel@gmail.com
-    password:
+    password: lrwn shju zcnp nsmv
     properties:
       mail:
         smtp:
@@ -34,16 +34,16 @@ spring:
 
 
   #Secret Key
-  Secret:
-    key: "fkgnkvbkdfgrthgsfvfghjgnfdhguigndfjvkndffdkngdfkj"
+Secret:
+  key: "fkgnkvbkdfgrthgsfvfghjgnfdhguigndfjvkndffdkngdfkj"
 
-  #AWS properties
-  aws:
-    accessKey:
-    secretKey:
-    region: ap-south-1
+#AWS properties
+aws:
+  accessKey: AKIARV3CMNE6SZY2OMYX
+  secretKey: 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
+  region: ap-south-1
 
-    s3:
-      bucket:
-        name: rentify-in-bucket
-        url: https://rentify-in-bucket.s3.ap-south-1.amazonaws.com
+  s3:
+    bucket:
+      name: rentify-in-bucket
+      url: https://rentify-in-bucket.s3.ap-south-1.amazonaws.com
