secret key removed

--- a/rentify-backend/src/main/resources/application-dev.yml
+++ b/rentify-backend/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: hushenjuyel@gmail.com
-    password: lrwn shju zcnp nsmv
+    password:
     properties:
       mail:
         smtp:
@@ -39,8 +39,8 @@ Secret:
 
 #AWS properties
 aws:
-  accessKey: AKIARV3CMNE6SZY2OMYX
-  secretKey: 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
+  accessKey:
+  secretKey:
   region: ap-south-1
 
   s3:
